Updated AttendanceControllerTest